@@ -47,6 +47,11 @@ public class GeneralAdminInp extends AbstractIRODSPackingInstruction {
 	/**
 	 * Generate the packing instruction suitable for adding the given user to
 	 * iRODS.
+	 * <p/>
+	 * Note that the user DN is not updated in this call, as there appears to be
+	 * bug where it gets truncated. The <code>UserAO</code> methods will instead
+	 * add a call to the equivalent of 'iadmin aua' to insert the user DN. See
+	 * comments for that class.
 	 * 
 	 * @param user
 	 *            {@link org.irods.jargon.core.pub.domain.User} to be added to
@@ -70,8 +75,8 @@ public class GeneralAdminInp extends AbstractIRODSPackingInstruction {
 		}
 
 		return new GeneralAdminInp("add", "user", user.getName(), user
-				.getUserType().getTextValue(), "", user.getUserDN(), BLANK,
-				BLANK, BLANK, BLANK, GEN_ADMIN_INP_API_NBR);
+				.getUserType().getTextValue(), "", "", BLANK, BLANK, BLANK,
+				BLANK, GEN_ADMIN_INP_API_NBR);
 	}
 
 	/**
